@@ -1,3 +1,11 @@
+2007-04-26  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/31598
+	* g++.dg/gomp/pr31598.C: New test.
+
+	PR tree-optimization/30558
+	* g++.dg/gomp/pr30558.C: New test.
+
 2007-04-24  Andreas Krebbel  <krebbel1@de.ibm.com>
 
 	PR target/31641
